--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <img src="C:\xampp\htdocs\task2\Xoonlogo.jpg" height="50px" width="150px"><a href="#" class="logo">XOON INFOTECH - PortfolioHub</a>
+            <img src="Xoonlogo.jpg" height="50px" width="150px"><a href="#" class="logo">XOON INFOTECH - PortfolioHub</a>
             <ul class="nav-links">
                 <li><a href="#templates">Templates</a></li>
                 <li><a href="#testimonials">Reviews</a></li>
